--- a/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
@@ -1,168 +1,224 @@
 UMRA_Email_show:
     pattern:  /UMRA/Email/{id}/show
     defaults: { _controller: UMRAMemberBundle:Email:show }
+    methods: [GET]
 UMRA_Email_edit:
     pattern:  /UMRA/Email/{id}/edit
     defaults: { _controller: UMRAMemberBundle:Email:edit }
+    methods: [GET]
 UMRA_Email_update:
     pattern:  /UMRA/Email/{id}/update
     defaults: { _controller: UMRAMemberBundle:Email:update }
+    methods: [PUT]
 UMRA_Email_new:
     pattern:  /UMRA/Person/{personId}/Email/new
     defaults: { _controller: UMRAMemberBundle:Email:new }
+    methods: [GET]
 UMRA_Email_create:
     pattern: /UMRA/Person/{personId}/Email/create
     defaults: { _controller: UMRAMemberBundle:Email:create }
+    methods: [POST]
 UMRA_Email_delete:
     pattern: /UMRA/Email/{id}/delete
     defaults: { _controller: UMRAMemberBundle:Email:delete }
+    methods: [DELETE]
 UMRA_Email:
     pattern:  /UMRA/Person/{personId}/Email/
     defaults: { _controller: UMRAMemberBundle:Email:index }
+    methods: [GET]
 UMRA_Household:
     pattern:  /UMRA/Household
     defaults: { _controller: UMRAMemberBundle:Household:index }
+    methods: [GET]
 UMRA_Household_show:
     pattern:  /UMRA/Household/{id}/show
     defaults: { _controller: UMRAMemberBundle:Household:show }
+    methods: [GET]
 UMRA_Household_edit:
     pattern:  /UMRA/Household/{id}/edit
     defaults: { _controller: UMRAMemberBundle:Household:edit }
+    methods: [GET]
 UMRA_Household_update:
     pattern:  /UMRA/Household/{id}/update
     defaults: { _controller: UMRAMemberBundle:Household:update }
+    methods: [PUT]
 UMRA_Household_new:
     pattern:  /UMRA/Household/new
     defaults: { _controller: UMRAMemberBundle:Household:new }
+    methods: [GET]
 UMRA_Household_create:
     pattern: /UMRA/Household/create
     defaults: { _controller: UMRAMemberBundle:Household:create }
+    methods: [POST]
 UMRA_Household_delete:
     pattern: /UMRA/Household/{id}/delete
     defaults: { _controller: UMRAMemberBundle:Household:delete }
+    methods: [DELETE]
 UMRA_Person:
     pattern:  /UMRA/Person
     defaults: { _controller: UMRAMemberBundle:Person:index }
+    methods: [GET]
 UMRA_Person_show:
     pattern:  /UMRA/Person/{id}/show
     defaults: { _controller: UMRAMemberBundle:Person:show }
+    methods: [GET]
 UMRA_Person_edit:
     pattern:  /UMRA/Person/{id}/edit
     defaults: { _controller: UMRAMemberBundle:Person:edit }
+    methods: [GET]
 UMRA_Person_update:
     pattern:  /UMRA/Person/{id}/update
     defaults: { _controller: UMRAMemberBundle:Person:update }
+    methods: [PUT]
 UMRA_Person_new:
     pattern:  /UMRA/Person/new
     defaults: { _controller: UMRAMemberBundle:Person:new }
+    methods: [GET]
 UMRA_Person_create:
     pattern: /UMRA/Person/create
     defaults: { _controller: UMRAMemberBundle:Person:create }
+    methods: [POST]
 UMRA_Person_delete:
     pattern: /UMRA/Person/{id}/delete
     defaults: { _controller: UMRAMemberBundle:Person:delete }
+    methods: [DELETE]
 UMRA_Phone:
     pattern:  /UMRA/Phone/
     defaults: { _controller: UMRAMemberBundle:Phone:index }
+    methods: [GET]
 UMRA_Phone_show:
     pattern:  /UMRA/Phone/{id}/show
     defaults: { _controller: UMRAMemberBundle:Phone:show }
+    methods: [GET]
 UMRA_Phone_edit:
     pattern:  /UMRA/Phone/{id}/edit
     defaults: { _controller: UMRAMemberBundle:Phone:edit }
+    methods: [GET]
 UMRA_Phone_update:
     pattern:  /UMRA/Phone/{id}/update
     defaults: { _controller: UMRAMemberBundle:Phone:update }
+    methods: [PUT]
 UMRA_Phone_new:
     pattern:  /UMRA/Phone/new
     defaults: { _controller: UMRAMemberBundle:Phone:new }
+    methods: [GET]
 UMRA_Phone_create:
     pattern: /UMRA/Phone/create
     defaults: { _controller: UMRAMemberBundle:Phone:create }
+    methods: [POST]
 UMRA_Phone_delete:
     pattern: /UMRA/Phone/{id}/delete
     defaults: { _controller: UMRAMemberBundle:Phone:delete }
+    methods: [DELETE]
 UMRA_Photo:
     pattern:  /UMRA/Photo/
     defaults: { _controller: UMRAMemberBundle:Photo:index }
+    methods: [GET]
 UMRA_Photo_show:
     pattern:  /UMRA/Photo/{id}/show
     defaults: { _controller: UMRAMemberBundle:Photo:show }
+    methods: [GET]
 UMRA_Photo_edit:
     pattern:  /UMRA/Photo/{id}/edit
     defaults: { _controller: UMRAMemberBundle:Photo:edit }
+    methods: [GET]
 UMRA_Photo_update:
     pattern:  /UMRA/Photo/{id}/update
     defaults: { _controller: UMRAMemberBundle:Photo:update }
+    methods: [PUT]
 UMRA_Photo_new:
     pattern:  /UMRA/Photo/new
     defaults: { _controller: UMRAMemberBundle:Photo:new }
+    methods: [GET]
 UMRA_Photo_create:
     pattern: /UMRA/Photo/create
     defaults: { _controller: UMRAMemberBundle:Photo:create }
+    methods: [POST]
 UMRA_Photo_delete:
     pattern: /UMRA/Photo/{id}/delete
     defaults: { _controller: UMRAMemberBundle:Photo:delete }
+    methods: [DELETE]
 UMRA_Residence:
     pattern:  /UMRA/Residence/
     defaults: { _controller: UMRAMemberBundle:Residence:index }
+    methods: [GET]
 UMRA_Residence_show:
     pattern:  /UMRA/Residence/{id}/show
     defaults: { _controller: UMRAMemberBundle:Residence:show }
+    methods: [GET]
 UMRA_Residence_edit:
     pattern:  /UMRA/Residence/{id}/edit
     defaults: { _controller: UMRAMemberBundle:Residence:edit }
+    methods: [GET]
 UMRA_Residence_update:
     pattern:  /UMRA/Residence/{id}/update
     defaults: { _controller: UMRAMemberBundle:Residence:update }
+    methods: [PUT]
 UMRA_Residence_new:
     pattern:  /UMRA/Residence/new
     defaults: { _controller: UMRAMemberBundle:Residence:new }
+    methods: [GET]
 UMRA_Residence_create:
     pattern: /UMRA/Residence/create
     defaults: { _controller: UMRAMemberBundle:Residence:create }
+    methods: [POST]
 UMRA_Residence_delete:
     pattern: /UMRA/Residence/{id}/delete
     defaults: { _controller: UMRAMemberBundle:Residence:delete }
+    methods: [DELETE]
 UMRA_Role:
     pattern:  /UMRA/Role/
     defaults: { _controller: UMRAMemberBundle:Role:index }
+    methods: [GET]
 UMRA_Role_show:
     pattern:  /UMRA/Role/{id}/show
     defaults: { _controller: UMRAMemberBundle:Role:show }
+    methods: [GET]
 UMRA_Role_edit:
     pattern:  /UMRA/Role/{id}/edit
     defaults: { _controller: UMRAMemberBundle:Role:edit }
+    methods: [GET]
 UMRA_Role_update:
     pattern:  /UMRA/Role/{id}/update
     defaults: { _controller: UMRAMemberBundle:Role:update }
+    methods: [PUT]
 UMRA_Role_new:
     pattern:  /UMRA/Role/new
     defaults: { _controller: UMRAMemberBundle:Role:new }
+    methods: [GET]
 UMRA_Role_create:
     pattern: /UMRA/Role/create
     defaults: { _controller: UMRAMemberBundle:Role:create }
+    methods: [POST]
 UMRA_Role_delete:
     pattern: /UMRA/Role/{id}/delete
     defaults: { _controller: UMRAMemberBundle:Role:delete }
+    methods: [DELETE]
 UMRA_Trans:
     pattern:  /UMRA/Trans/
     defaults: { _controller: UMRAMemberBundle:Trans:index }
+    methods: [GET]
 UMRA_Trans_show:
     pattern:  /UMRA/Trans/{id}/show
     defaults: { _controller: UMRAMemberBundle:Trans:show }
+    methods: [GET]
 UMRA_Trans_edit:
     pattern:  /UMRA/Trans/{id}/edit
     defaults: { _controller: UMRAMemberBundle:Trans:edit }
+    methods: [GET]
 UMRA_Trans_update:
     pattern:  /UMRA/Trans/{id}/update
     defaults: { _controller: UMRAMemberBundle:Trans:update }
+    methods: [PUT]
 UMRA_Trans_new:
     pattern:  /UMRA/Trans/new
     defaults: { _controller: UMRAMemberBundle:Trans:new }
+    methods: [GET]
 UMRA_Trans_create:
     pattern: /UMRA/Trans/create
     defaults: { _controller: UMRAMemberBundle:Trans:create }
+    methods: [POST]
 UMRA_Trans_delete:
     pattern: /UMRA/Trans/{id}/delete
     defaults: { _controller: UMRAMemberBundle:Trans:delete }
+    methods: [DELETE]
