--- a/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
@@ -30,6 +30,14 @@ UMRA_Household_edit:
     pattern:  /UMRA/Household/{id}/edit
     defaults: { _controller: UMRAMemberBundle:Household:edit }
     methods: [GET]
+UMRA_Household_Person_new:
+    pattern:  /UMRA/Household/{householdId}/Person/new
+    defaults: { _controller: UMRAMemberBundle:Person:new }
+    methods: [GET]
+UMRA_Household_Person_create:
+    pattern: /UMRA/Household/{householdId}/Person
+    defaults: { _controller: UMRAMemberBundle:Person:create }
+    methods: [POST]
 UMRA_Household_Email_new:
     pattern:  /UMRA/Household/{householdId}/Email/new
     defaults: { _controller: UMRAMemberBundle:Email:new, personId: ~ }
@@ -53,10 +61,6 @@ UMRA_Household_delete:
 UMRA_Person:
     pattern:  /UMRA/Person
     defaults: { _controller: UMRAMemberBundle:Person:index }
-    methods: [GET]
-UMRA_Person_new:
-    pattern:  /UMRA/Person/new
-    defaults: { _controller: UMRAMemberBundle:Person:new }
     methods: [GET]
 UMRA_Person_Email_new:
     pattern:  /UMRA/Person/{personId}/Email/new
@@ -86,10 +90,6 @@ UMRA_Person_update:
     pattern:  /UMRA/Person/{id}
     defaults: { _controller: UMRAMemberBundle:Person:update }
     methods: [PUT]
-UMRA_Person_create:
-    pattern: /UMRA/Person
-    defaults: { _controller: UMRAMemberBundle:Person:create }
-    methods: [POST]
 UMRA_Person_delete:
     pattern: /UMRA/Person/{id}
     defaults: { _controller: UMRAMemberBundle:Person:delete }
