--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
-		"symfony/intl": "2.4.0",
+        "symfony/intl": "2.4.0",
+        "symfony/icu": "1.1.1",
         "friendsofsymfony/user-bundle": "~1.3"
     },
     "scripts": {
