--- a/src/UMRA/Bundle/MemberBundle/Resources/config/services.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/services.yml
@@ -2,6 +2,6 @@ parameters:
 #    umra_member.example.class: UMRA\Bundle\MemberBundle\Example
 
 services:
-#    umra_member.example:
-#        class: %umra_member.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    umra_member.user_manipulator:
+        class: UMRA\Bundle\MemberBundle\Services\UserManipulator
+        arguments: ["@fos_user.user_manager"]
