Add / route and controller for redirecting users to proper place.
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+UMRA_Landing:
+    pattern:  /
+    defaults: { _controller: UMRAMemberBundle:Default:index }
+    methods: [GET]
 UMRA_Email_show:
     pattern:  /email/{id}
     defaults: { _controller: UMRAMemberBundle:Email:show }
