--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,5 +23,10 @@ security:
         - { path: ^/admin/, role: ROLE_ADMIN }
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_CAN_EDIT_OWN_PERSON: ROLE_CAN_VIEW_OWN_PERSON
+        ROLE_CAN_EDIT_OTHER_PERSON: ROLE_CAN_VIEW_OTHER_PERSON
+        ROLE_CAN_EDIT_OWN_HOUSEHOLD: ROLE_CAN_VIEW_OWN_HOUSEHOLD
+        ROLE_CAN_EDIT_OTHER_HOUSEHOLD: ROLE_CAN_VIEW_OTHER_HOUSEHOLD
+        ROLE_USER: [ ROLE_CAN_EDIT_OWN_PERSON, ROLE_CAN_EDIT_OWN_HOUSEHOLD, ROLE_CAN_VIEW_OWN_TRANSACTION ]
+        ROLE_ADMIN: [ ROLE_USER, ROLE_CAN_EDIT_OTHER_PERSON, ROLE_CAN_EDIT_OTHER_HOUSEHOLD, ROLE_CAN_EDIT_OTHER_TRANSACTION ]
+        ROLE_SUPER_ADMIN: [ ROLE_ADMIN ]
