Lock down /households route to users with ROLE_CAN_VIEW_OTHER_HOUSEHOLD
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,7 +19,8 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/profile/, role: ROLE_USER }
+        - { path: ^/households, role: ROLE_CAN_VIEW_OTHER_HOUSEHOLD }
+        - { path: ^/profile, role: ROLE_USER }
         - { path: ^/admin/, role: ROLE_ADMIN }
 
     role_hierarchy:
