--- a/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
@@ -246,3 +246,11 @@ UMRA_Trans_delete:
     pattern: /transaction/{id}
     defaults: { _controller: UMRAMemberBundle:Trans:delete }
     methods: [DELETE]
+UMRA_register:
+    pattern: /register
+    defaults: { _controller: UMRAMemberBundle:Registration:register }
+    methods: [GET, POST]
+UMRA_renew:
+    pattern: /renew
+    defaults: { _controller: UMRAMemberBundle:Registration:renew }
+    methods: [GET, POST]
