--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "symfony/intl": "2.4.0",
         "symfony/icu": "1.0.*",
-        "friendsofsymfony/user-bundle": "~1.3"
+        "friendsofsymfony/user-bundle": "~1.3",
+        "sonata-project/admin-bundle": "dev-master",
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
