--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,5 +29,5 @@ security:
         ROLE_CAN_EDIT_OWN_HOUSEHOLD: ROLE_CAN_VIEW_OWN_HOUSEHOLD
         ROLE_CAN_EDIT_OTHER_HOUSEHOLD: ROLE_CAN_VIEW_OTHER_HOUSEHOLD
         ROLE_USER: [ ROLE_CAN_EDIT_OWN_PERSON, ROLE_CAN_EDIT_OWN_HOUSEHOLD, ROLE_CAN_VIEW_OWN_TRANSACTION ]
-        ROLE_ADMIN: [ ROLE_USER, ROLE_CAN_EDIT_OTHER_PERSON, ROLE_CAN_EDIT_OTHER_HOUSEHOLD, ROLE_CAN_EDIT_OTHER_TRANSACTION ]
+        ROLE_ADMIN: [ ROLE_USER, ROLE_CAN_EDIT_OTHER_PERSON, ROLE_CAN_EDIT_OTHER_HOUSEHOLD, ROLE_CAN_EDIT_OTHER_TRANSACTION, ROLE_SONATA_ADMIN ]
         ROLE_SUPER_ADMIN: [ ROLE_ADMIN ]
