--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,7 +20,21 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/households, role: ROLE_CAN_VIEW_OTHER_HOUSEHOLD }
+        - { path: ^/residences, role: ROLE_CAN_VIEW_OTHER_HOUSEHOLD }
+        - { path: ^/persons, role: ROLE_CAN_VIEW_OTHER_PERSON }
+        - { path: ^/phones, role: ROLE_CAN_VIEW_OTHER_PERSON }
+        - { path: ^/emails, role: ROLE_CAN_VIEW_OTHER_PERSON }
+        - { path: ^/roles, role: ROLE_ADMIN }
+        - { path: ^/transactions, role: ROLE_ADMIN }
+        - { path: ^/role, role: ROLE_ADMIN }
+        - { path: ^/transaction, role: ROLE_CAN_VIEW_OWN_TRANSACTION }
         - { path: ^/profile, role: ROLE_USER }
+        - { path: ^/household, role: ROLE_USER }
+        - { path: ^/person, role: ROLE_USER }
+        - { path: ^/phone, role: ROLE_USER }
+        - { path: ^/residence, role: ROLE_USER }
+        - { path: ^/email, role: ROLE_USER }
+        - { path: ^/renew, role: ROLE_USER }
         - { path: ^/admin/, role: ROLE_ADMIN }
 
     role_hierarchy:
