--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,6 +7,9 @@ security:
         FOS\UserBundle\Model\UserInterface: sha512
 
     firewalls:
+        dev:
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            security: false
         main:
             pattern: ^/
             form_login:
