--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,6 +72,8 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: UMRA\Bundle\MemberBundle\Entity\Person
+    service:
+        mailer: fos_user.mailer.twig_swift
 
 sonata_admin:
     title: UMRA Admin
