--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "symfony/intl": "2.4.0",
         "symfony/icu": "1.0.*",
         "friendsofsymfony/user-bundle": "~1.3",
-        "sonata-project/admin-bundle": "dev-master",
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master"
+        "sonata-project/admin-bundle": "~2.3",
+        "sonata-project/doctrine-orm-admin-bundle": "~2.3"
     },
     "scripts": {
         "post-install-cmd": [
