Fix display of date filters in sonata admin
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -86,6 +86,24 @@ sonata_admin:
     title: UMRA Admin
     title_logo: bundles/sonataadmin/logo_title.png
 
+    assets:
+        stylesheets:
+            # Defaults:
+            - bundles/sonataadmin/vendor/bootstrap/dist/css/bootstrap.min.css
+            - bundles/sonataadmin/vendor/AdminLTE/css/font-awesome.min.css
+            - bundles/sonataadmin/vendor/AdminLTE/css/ionicons.min.css
+            - bundles/sonataadmin/vendor/AdminLTE/css/AdminLTE.css
+            - bundles/sonatacore/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css
+            - bundles/sonataadmin/vendor/jqueryui/themes/base/jquery-ui.css
+            - bundles/sonataadmin/vendor/select2/select2.css
+            - bundles/sonataadmin/vendor/select2/select2-bootstrap.css
+            - bundles/sonataadmin/vendor/x-editable/dist/bootstrap3-editable/css/bootstrap-editable.css
+            - bundles/sonataadmin/css/styles.css
+            - bundles/sonataadmin/css/layout.css
+
+            # Custom:
+            - css/application.css
+
 sonata_block:
     default_contexts: [admin]
     blocks:
