--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -111,3 +111,5 @@ sonata_block:
         # Enable the SonataAdminBundle block
         sonata.admin.block.admin_list:
             contexts:   [admin]
+        sonata.admin.block.search_result:
+            contexts: [admin]
