--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -113,6 +113,17 @@ sonata_block:
     blocks:
         # Enable the SonataAdminBundle block
         sonata.admin.block.admin_list:
-            contexts:   [admin]
+            contexts: [admin]
         sonata.admin.block.search_result:
             contexts: [admin]
+
+knp_paginator:
+    page_range: 5                      # default page range used in pagination control
+    default_options:
+        page_name: page                # page query parameter name
+        sort_field_name: sort          # sort field query parameter name
+        sort_direction_name: direction # sort direction query parameter name
+        distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
+    template:
+        pagination: KnpPaginatorBundle:Pagination:twitter_bootstrap_v3_pagination.html.twig 
+        sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
