Add basic household CSV export functionality
Still need full list of fields to be included in CSV export

Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
@@ -19,9 +19,11 @@ UMRA_Email_delete:
     defaults: { _controller: UMRAMemberBundle:Email:delete }
     methods: [DELETE]
 UMRA_Household:
-    pattern:  /households
-    defaults: { _controller: UMRAMemberBundle:Household:index }
+    pattern:  /households.{_format}
+    defaults: { _controller: UMRAMemberBundle:Household:index, _format: html }
     methods: [GET]
+    requirements:
+        _format: "html|csv"
 UMRA_Household_new:
     pattern:  /household/new
     defaults: { _controller: UMRAMemberBundle:Household:new }
